<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/layout_parent"
        android:background="@drawable/british_flag">

        <RelativeLayout
            android:id="@+id/layout_biotexts"
            android:layout_width="0px"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:paddingTop="20dp"
            android:paddingLeft="20dp"
            android:paddingStart="20dp">

            <TextView
                android:id="@+id/text_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="28sp"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:text="@string/dummy_name"
                android:textStyle="bold"
                android:textColor="@android:color/white"/>

            <TextView
                android:id="@+id/text_surname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="32sp"
                android:layout_below="@+id/text_name"
                android:text="@string/dummy_surname"
                android:textStyle="bold"
                android:textColor="@android:color/white"/>

            <com.ekirei.tennistest2.Views.VerticalTextView
                android:id="@+id/text_ranking_string"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_surname"
                android:layout_marginTop="15dp"
                android:gravity="bottom|end"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:text="@string/ranking_text"/>

            <TextView
                android:id="@+id/text_ranking_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/text_ranking_string"
                android:layout_toEndOf="@id/text_ranking_string"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                android:text="@string/dummy_ranking_number"
                android:layout_alignTop="@+id/text_ranking_string"
                android:layout_alignBottom="@+id/text_ranking_string"
                android:textSize="70sp"
                android:gravity="bottom"/>

            <View
                android:id="@+id/separator_vertical"
                android:background="@android:color/white"
                android:layout_width = "3dip"
                android:layout_height="fill_parent"
                android:layout_toRightOf="@id/text_ranking_number"
                android:layout_toEndOf="@id/text_ranking_number"
                android:layout_alignTop="@id/text_ranking_string"
                android:layout_alignBottom="@id/text_ranking_string"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"/>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_toRightOf="@id/separator_vertical"
                android:layout_toEndOf="@id/separator_vertical"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_alignTop="@+id/separator_vertical"
                android:layout_alignBottom="@id/text_ranking_string"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/image_flag"
                    android:layout_width="match_parent"
                    android:layout_height="0px"
                    android:layout_weight="60"
                    android:padding="5dp"/>

                <TextView
                    android:id="@+id/text_nation_sigle"
                    android:layout_width="match_parent"
                    android:layout_height="0px"
                    android:layout_weight="40"
                    android:textStyle="bold"
                    android:textColor="@android:color/white"
                    android:text="@string/dummy_nation_sigle"
                    android:gravity="center_horizontal"
                    android:textSize="26sp"/>

            </LinearLayout>

        </RelativeLayout>

        <ImageView
            android:id="@+id/image_playerbio"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/murray_full15"
            android:scaleType="fitXY"
            android:layout_marginTop="15dp"/>

    </LinearLayout>

    <ImageView
        android:id="@+id/image_logo_tournament"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_margin="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="68">

        </RelativeLayout>

        <ListView
            android:id="@+id/listview_bio_data"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="32"
            android:background="#99ffffff"
            android:padding="20dp"
            android:divider="@android:color/holo_blue_dark"
            android:dividerHeight="3px"/>

    </LinearLayout>

</RelativeLayout>